--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
+          push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/microservices-items:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/microservices-items:${{ github.sha }}
