--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "homepage": "https://github.com/theZivkovic/microservices-items#readme",
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/pg": "^8.16.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "pg": "^8.16.3"
   }
 }
