--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.16.3"
   }
