--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/index.js"
+    "build:watch": "tsc --watch",
+    "serve:watch": "nodemon dist/index.js",
+    "start": "npm run build && node dist/index.js",
+    "start:dev": "npm run build && concurrently --kill-others \"npm run build:watch\" \"npm run serve:watch\""
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,8 @@
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/pg": "^8.16.0",
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11",
     "typescript": "^5.9.3"
   },
   "dependencies": {
