save audit logs on create

--- a/sample.env
+++ b/sample.env
@@ -3,3 +3,4 @@ POSTGRES_PORT=5433
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
+AUDIT_LOGS_SERVICE_URL=http://localhost:80/api/audit-logs
