--- a/ItemsApi/appsettings.json
+++ b/ItemsApi/appsettings.json
@@ -15,7 +15,7 @@
       "Database": "FROM-ENV"
     },
     "AuditLogService": {
-      "BaseUrl": "http://localhost:80/api/audit-logs"
+      "BaseUrl": "http://localhost:80"
     }
   }
 }
