--- a/ItemsApi/appsettings.json
+++ b/ItemsApi/appsettings.json
@@ -1,4 +1,21 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Using": [ "Serilog.Sinks.Console" ],
+    "WriteTo": [
+      { "Name": "Console" }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "Properties": {
+      "ApplicationName": "ItemsApi"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
